fix for alignment on expert cast/recharge spans

--- a/css/pvxcode.css
+++ b/css/pvxcode.css
@@ -157,7 +157,7 @@ span.pvx_attrib_bg img {
 }
 
 /* Tooltips - Left column - sacrifice, energy, overcast, recharge, activation, adrenaline. */
-#pvx_attributes span {
+#pvx_attributes > span {
     display:block;
     width:18px;
     height:18px;
@@ -210,7 +210,7 @@ span.pvx_attrib_bg img {
     background-position:0 1px;
 }
 
-/* Ranger expertise energy reduction / Mesmer fast casting activation reduction recieve additional spans */
+/* Ranger expertise energy reduction / Dervish mysticism energy reduction / Mesmer fast casting activation reduction recieve additional spans */
 #pvx_attributes #pvx_cast span {
     color:#770077;
     text-decoration:underline;
